Fix errors from merging JPlag v5.0.0